fix: Map icons and footer would overlap the breadcrumb in header while scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ nav h1 a {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 9000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
